--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,13 @@ body {
     background-color: #263238;
     width: 100vw;
     height: 100%;
+    color: #ffffff;
 }
 
 .canvas {
     width: 100%;
     height: 900px;
+    position: flex;
 }
 
 .container {
