font sizes reduced and button styling WIP

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ body {
     font-family: 'Raleway', sans-serif;
     color: #ffffff;
     text-align: center;
-    font-size: 1.5rem;
 }
 
 a {
@@ -40,7 +39,7 @@ a {
 }
 
 .home-banner {
-    font-size: 3rem;
+    font-size: 2rem;
     padding: 100px 0 25px;
 }
 
@@ -48,19 +47,17 @@ a {
     color: #00c78e;
 }
 
-.button {
+button {
     padding: 10px 20px;
     border: 2px solid #ffffff;
-    box-sizing: inherit;
     display: inline-block;
-    font-size: 2rem;
+    font-size: 1.2rem;
     transition: all .5s;
-    cursor: pointer;
 }
 
-.button:hover {
+button:hover {
     background-color: #00c78e;
-    border-color: #00c78e;
+    border: 2px solid #00c78e;
     cursor: pointer;
 }
 
@@ -70,4 +67,8 @@ li {
     margin-right: 25px;
     padding: 7px;
     border-radius: 5px;
+}
+
+.lg-hidden {
+    visibility: hidden;
 }
