--- a/css/styles.css
+++ b/css/styles.css
@@ -23,15 +23,6 @@ a {
     height: 100%;
 }
 
-.canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-
-}
-
 .container {
     margin: 0 auto;
     width: 950px;
@@ -47,18 +38,27 @@ a {
     color: #00c78e;
 }
 
-button {
+.drop-button {
     padding: 10px 20px;
     border: 2px solid #ffffff;
     display: inline-block;
     font-size: 1.2rem;
-    transition: all .5s;
+    transition: all .5s ease-in-out;
 }
 
-button:hover {
+.drop-button .arrow {
+    transition: transform .3s ease-in-out;
+    margin-left: 5px;
+}
+
+.drop-button:hover {
     background-color: #00c78e;
     border: 2px solid #00c78e;
     cursor: pointer;
+}
+
+.drop-button:hover .arrow {
+    transform: rotate(90deg);
 }
 
 li {
@@ -67,6 +67,11 @@ li {
     margin-right: 25px;
     padding: 7px;
     border-radius: 5px;
+}
+
+li:hover {
+    cursor: pointer;
+    color: #c70039;
 }
 
 .lg-hidden {
