--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 
 body {
     font-family: 'Raleway', sans-serif;
-    color: #ffffff;
     text-align: center;
 }
 
@@ -19,6 +18,7 @@ a {
 
 #home {
     background-color: #263238;
+    color: #ffffff;
     width: 100vw;
     height: 100%;
 }
@@ -77,3 +77,19 @@ li:hover {
 .lg-hidden {
     visibility: hidden;
 }
+
+#about {
+    color: #263238;
+}
+
+.picture {
+    width: 200px;
+}
+
+.lg-col-2 {
+    width: 50%;
+}
+
+/*.sm-col-1 {*/
+    /*width: 100%*/
+/*}*/
