--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     text-align: center;
+    font-size: 1.2rem;
 }
 
 a {
@@ -30,11 +31,11 @@ a {
 }
 
 .home-banner {
-    font-size: 2rem;
-    padding: 100px 0 25px;
+    font-size: 2.5rem;
+    padding: 100px 0 40px;
 }
 
-.highlight {
+.highlight-mint {
     color: #00c78e;
 }
 
@@ -42,7 +43,7 @@ a {
     padding: 10px 20px;
     border: 2px solid #ffffff;
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     transition: all .5s ease-in-out;
 }
 
@@ -78,18 +79,38 @@ li:hover {
     visibility: hidden;
 }
 
+/*ABOUT */
+
 #about {
     color: #263238;
 }
 
-.picture {
-    width: 200px;
+.header {
+    padding: 20px 0;
+    font-size: 1.5rem;
+}
+
+.picture img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 250px;
+}
+
+.lg-col-4 {
+    width: 25%;
 }
 
 .lg-col-2 {
     width: 50%;
 }
 
-/*.sm-col-1 {*/
-    /*width: 100%*/
-/*}*/
+.key-skill {
+    float: left;
+    padding: 10px 0 50px;
+}
+
+.icon {
+    font-size: 3rem;
+    color: #263238;
+}
