--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,21 @@ a {
     color: inherit;
 }
 
+/*COLUMNS*/
+
+.lg-col-4 {
+    width: 25%;
+}
+
+.lg-col-2 {
+    width: 50%;
+    float: left;
+}
+
+.lg-col-3 {
+    width: 33.333333333%;
+}
+
 /*HOME*/
 
 #home {
@@ -79,14 +94,19 @@ li:hover {
     visibility: hidden;
 }
 
+.section-margins {
+    padding: 0 0 50px;
+}
+
 /*ABOUT */
 
 #about {
     color: #263238;
+    background-color: #ffffff;
 }
 
 .header {
-    padding: 20px 0;
+    padding: 0 0 20px;
     font-size: 1.7rem;
 }
 
@@ -95,15 +115,6 @@ li:hover {
     margin: 0 auto;
     border-radius: 50%;
     width: 200px;
-}
-
-.lg-col-4 {
-    width: 25%;
-}
-
-.lg-col-2 {
-    width: 50%;
-    float: left;
 }
 
 .key-skill {
@@ -140,3 +151,28 @@ li:hover {
     height: 30px;
     padding: 8px 0;
 }
+
+/*PORTFOLIO*/
+
+#portfolio {
+    color: #263238;
+    background-color: #cfd8dc;
+}
+
+.card {
+    background-color: #c70039;
+    float: left;
+}
+
+/*.project-hover {*/
+     /*background-color: rgba(255,255,255,0.8);*/
+     /*width: 100%;*/
+     /*height: 100%;*/
+     /*position: absolute;*/
+     /*top: 0;*/
+     /*left: 0;*/
+ /*}*/
+
+/*.project-hover:hover {*/
+    /*cursor: pointer;*/
+/*}*/
