--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,14 @@ a {
     color: inherit;
 }
 
+.highlight-mint {
+    color: #00c78e;
+}
+
+.highlight-raspberry {
+    color: #c70039;
+}
+
 /*COLUMNS*/
 
 .lg-col-4 {
@@ -49,10 +57,6 @@ a {
 .home-banner {
     font-size: 2.5rem;
     padding: 100px 0 40px;
-}
-
-.highlight-mint {
-    color: #00c78e;
 }
 
 .drop-button {
@@ -168,6 +172,10 @@ li:hover {
     padding-top: 80%;
 }
 
+.card:hover {
+    cursor: pointer;
+}
+
 .project-one {
     background-image: url("../images/projects/solarsystem.png");
     background-size: 100% auto;
@@ -204,15 +212,3 @@ li:hover {
     /*background-repeat: no-repeat;*/
 /*}*/
 
-.project-hover {
-     /*background-color: rgba(255,255,255,0.9);*/
-     width: 100%;
-     /*height: 100%;*/
-     /*position: absolute;*/
-     /*top: 0;*/
-     /*left: 0;*/
- }
-
-.project-hover:hover {
-    cursor: pointer;
-}
