--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ li:hover {
 
 #portfolio {
     color: #263238;
-    background-color: #cfd8dc;
+    background-color: #eceff1;
 }
 
 .card {
@@ -224,3 +224,39 @@ li:hover {
     /*background-repeat: no-repeat;*/
 }
 
+/*CONTACT*/
+
+
+#contact {
+    background-color:  #546e7a;
+    color: #ffffff;
+}
+
+.form-element {
+    width: 50%;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color:  #263238;
+    border: none;
+    color: #ffffff;
+}
+
+textarea {
+    height: 200px;
+    overflow: auto;
+}
+
+.send-button {
+    padding: 10px;
+    background-color: transparent;
+    color: #ffffff;
+    border-radius: 0;
+    border: 2px solid #ffffff;
+    transition: all .5s ease-in-out;
+}
+
+.send-button:hover {
+    border: 2px solid #00c78e;
+    background-color: #00c78e;
+    cursor: pointer;
+}
