--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,16 @@ a {
     color: #c70039;
 }
 
+.container {
+    margin: 0 auto;
+    width: 1200px;
+    overflow: auto;
+}
+
+.section-margins {
+    padding: 0 0 50px;
+}
+
 /*COLUMNS*/
 
 .lg-col-4 {
@@ -46,12 +56,6 @@ a {
     color: #ffffff;
     width: 100vw;
     height: 100%;
-}
-
-.container {
-    margin: 0 auto;
-    width: 1200px;
-    overflow: auto;
 }
 
 .home-banner {
@@ -99,10 +103,6 @@ li:hover {
 
 .lg-hidden {
     visibility: hidden;
-}
-
-.section-margins {
-    padding: 0 0 50px;
 }
 
 /*ABOUT */
@@ -234,11 +234,12 @@ li:hover {
 
 .form-element {
     width: 50%;
-    margin-bottom: 10px;
     padding: 10px;
     background-color:  #263238;
     border: none;
     color: #ffffff;
+    display: block;
+    margin: 0 25% 15px;
 }
 
 textarea {
@@ -247,7 +248,7 @@ textarea {
 }
 
 .send-button {
-    padding: 10px;
+    padding: 10px 25px;
     background-color: transparent;
     color: #ffffff;
     border-radius: 0;
