--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Raleway', sans-serif;
     text-align: center;
     font-size: 1.2rem;
+    font-weight: 200;
 }
 
 a {
@@ -23,18 +24,23 @@ a {
     color: #c70039;
 }
 
+.bold {
+    font-weight: 500;
+    font-size: 1.3rem;
+}
+
 .container {
     margin: 0 auto;
-    width: 1200px;
+    width: 1100px;
     overflow: auto;
 }
 
 .section-margins {
-    padding: 0 0 50px;
+    padding: 0 0 70px;
 }
 
 .header {
-    padding: 0 0 20px;
+    padding: 10px 0 20px;
     font-size: 1.7rem;
 }
 
@@ -64,8 +70,13 @@ a {
 }
 
 .home-banner {
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding: 100px 0 40px;
+}
+
+.name {
+    font-size: 2.6rem;
+    margin-bottom: 12px;
 }
 
 .drop-button {
@@ -120,23 +131,30 @@ li:hover {
 
 .picture img {
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     border-radius: 50%;
-    width: 200px;
+    width: 250px;
 }
 
 .key-skill {
     float: left;
-    padding: 10px 0 50px;
+    padding: 20px 0 70px;
+}
+
+.key-summary {
+    padding: 0 18px;
 }
 
 .about-icon {
-    font-size: 3rem;
-    color: #263238;
+    font-size: 3.5rem;
+    color: #900c3f;
+}
+
+.description {
+    padding: 0 50px;
 }
 
 .bar {
-    width: 90%;
     margin: 0 0 15px 0;
     background-color: #cfd8dc;
     color: #ffffff;
@@ -150,8 +168,8 @@ li:hover {
     font-size: 1.1rem;
     width: 140px;
     background-color: #900c3f;
-    height: 40px;
-    padding: 10px 0;
+    height: 30px;
+    padding: 6px 0;
 }
 
 /*PORTFOLIO*/
@@ -227,15 +245,21 @@ li:hover {
     width: 50%;
     padding: 10px;
     background-color:  #263238;
-    border: none;
     color: #ffffff;
     display: block;
     margin: 0 25% 15px;
+    border: 1px solid #263238;
 }
 
 textarea {
     height: 200px;
     overflow: auto;
+    border: 1px solid #263238;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+    border: 1px solid #00c78e;
 }
 
 .send-button {
