particles canvas positioned with home text

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    margin: 0;
     font-family: 'Raleway', sans-serif;
     text-align: center;
     font-size: 1.2rem;
@@ -65,8 +66,25 @@ a {
 #home {
     background-color: #263238;
     color: #ffffff;
+    position: static;
     width: 100vw;
+    height: 100vh;
+}
+
+#canvas {
+    width: 100%;
+    height: 100vh;
+    background: #263238;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.home-text {
+    width: 100%;
     height: 100%;
+    position: absolute;
+    top: 20%;
 }
 
 .home-banner {
@@ -103,6 +121,11 @@ a {
 }
 
 /*NAVBAR*/
+
+#navbar {
+    background-color: #263238;
+    color: #ffffff;
+}
 
 li {
     list-style: none;
