--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ a {
 /*NAVBAR*/
 
 #navbar {
+    overflow: hidden;
     background-color: #263238;
     color: #ffffff;
 }
@@ -142,6 +143,16 @@ li:hover {
 
 .lg-hidden {
     visibility: hidden;
+}
+
+.sticky {
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+
+.sticky + #about {
+    padding-top: 60px;
 }
 
 /*ABOUT */
