--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -11,11 +11,61 @@
     cursor: pointer;
 }
 
-.project-summary {
-    font-size: 1.3rem;
-    background-color: rgba(255,255,255,0.85);
 
+.wrap {
+    max-width: 22em;
+    margin: 8% auto;
 }
+
+.card {
+    position: relative;
+    height: 15em;
+    -webkit-perspective: 900px;
+    perspective: 900px;
+}
+
+.card h3 {
+    font-size: 1.3em;
+    line-height: 1.2;
+    text-transform: uppercase;
+}
+
+.card-liner {
+    padding: 20px 30px 40px;
+    background: #fff;
+}
+
+.front, .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.front {
+    z-index: 99;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.back {
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+.back .card-liner {
+    background: #333;
+    color: #fff;
+}
+
+
+
+
+
+
+
 
 .project-button {
     border: 2px solid #c70039;
@@ -54,56 +104,4 @@
 
 .project-six {
     background-color: #00c78e;
-}
-
-.projects {
-    width: 90%;
-    max-width: 22em;
-    margin: 8% auto;
-}
-
-.card {
-    position: relative;
-    height: 15em;
-}
-.card h3 {
-    font-size: 1.3em;
-    line-height: 1.2;
-    text-transform: uppercase;
-}
-
-.card-guts {
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-
-.card-liner {
-    padding: 20px 30px 40px;
-    background: #fff;
-}
-
-.card-front, .card-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.card-front {
-    z-index: 99;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.card-back {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-
-.card-back .card-liner {
-    background: #000000;
-    color: #ffffff;
 }
