--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -4,35 +4,14 @@
 }
 
 .card {
-    background-color: #c70039;
-}
-
-.card:hover {
-    cursor: pointer;
-}
-
-
-.wrap {
-    max-width: 22em;
-    margin: 8% auto;
-}
-
-.card {
     position: relative;
     height: 15em;
     -webkit-perspective: 900px;
     perspective: 900px;
 }
 
-.card h3 {
-    font-size: 1.3em;
-    line-height: 1.2;
-    text-transform: uppercase;
-}
-
-.card-liner {
-    padding: 20px 30px 40px;
-    background: #fff;
+.wrap {
+    /*margin: 2% auto;*/
 }
 
 .front, .back {
@@ -46,30 +25,33 @@
 }
 
 .front {
-    z-index: 99;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+    z-index: 4;
 }
 
 .back {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-.back .card-liner {
-    background: #333;
-    color: #fff;
+    background: #ffffff;
 }
 
+.project-title {
+    padding-top: 20%;
+    font-size: 1.7rem;
+}
 
-
-
-
-
-
+.project-technologies {
+    padding: 5%;
+    font-size: 1.5rem;
+}
 
 .project-button {
+    font-size: 1.5rem;
+    width: 45%;
+    margin: 5% 27.5%;
+    padding: 5px 10px;
     border: 2px solid #c70039;
-    background-color: rgba(255,255,255,0.85);
+}
+
+.project-button:hover {
+    cursor: pointer;
 }
 
 .project-one {
