--- a/css/aboutstyles.css
+++ b/css/aboutstyles.css
@@ -45,3 +45,47 @@
     height: 30px;
     padding: 6px 0;
 }
+
+/*MEDIA QUERIES*/
+
+
+@media screen and (max-width: 1100px) {
+
+    .picture img {
+        width: 200px;
+    }
+
+    .key-skill {
+        float: left;
+        padding: 15px 0 60px;
+    }
+
+}
+
+@media screen and (max-width: 850px) {
+
+    .key-skill {
+        padding: 5px 0 30px;
+    }
+
+    .skills {
+        width: 75%;
+        margin: 30px 12.5%;
+    }
+
+}
+
+
+@media screen and (max-width: 500px) {
+
+    .tag {
+        font-size: 0.9rem;
+        width: 100px;
+        height: 25px;
+    }
+
+    .bar {
+        margin: 0 0 10px 0;
+    }
+
+}
