--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -5,7 +5,7 @@
 
 .card {
     position: relative;
-    height: 15em;
+    height: 15rem;
     -webkit-perspective: 900px;
     perspective: 900px;
 }
@@ -88,4 +88,68 @@
     background-image: url("../images/projects/totallypawesome.png");
     background-size: 100% auto;
     background-repeat: no-repeat;
+}
+
+/*MEDIA QUERIES*/
+
+
+@media screen and (max-width: 1100px) {
+
+    .card {
+        height: 19rem;
+    }
+    .project-title {
+        padding-top: 15%;
+        font-size: 1.5rem;
+    }
+
+    .project-technologies {
+        font-size: 1.3rem;
+    }
+
+    .project-button {
+        font-size: 1.3rem;
+    }
+
+}
+
+@media screen and (max-width: 850px) {
+
+    .projects {
+        width: 60%;
+    }
+
+    .project-title {
+        padding-top: 15%;
+        font-size: 1.3rem;
+    }
+
+    .project-technologies {
+        font-size: 1.1rem;
+    }
+
+    .project-button {
+        font-size: 1.1rem;
+    }
+
+}
+
+@media screen and (max-width: 550px) {
+
+    .projects {
+        width: 100%;
+    }
+
+    .card {
+        height: 17rem;
+    }
+
+}
+
+@media screen and (max-width: 350px) {
+
+    .card {
+        height: 15rem;
+    }
+
 }
