--- a/css/styles.css
+++ b/css/styles.css
@@ -87,3 +87,46 @@ a {
 .copyright p {
     color: #546e7a;
 }
+
+/*MEDIA QUERIES*/
+
+
+@media screen and (max-width: 1200px) {
+
+    .container {
+        width: 800px;
+    }
+
+    .tb-col-2 {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+
+    .container {
+        width: 540px;
+    }
+
+    .sm-col-2 {
+        width: 50%;
+    }
+
+    .sm-col-1 {
+        width: 100%;
+    }
+
+    .footer-icon {
+        margin: 10px 10px;
+        font-size: 2.5rem;
+    }
+
+}
+
+@media screen and (max-width: 550px) {
+
+    .container {
+        width: 100%;
+    }
+
+}
