--- a/public/css/portfoliostyles.css
+++ b/public/css/portfoliostyles.css
@@ -5,13 +5,13 @@
 
 .card {
     position: relative;
-    height: 15rem;
+    height: 16.5rem;
     -webkit-perspective: 900px;
     perspective: 900px;
 }
 
 .projects {
-    padding: 45px 0;
+    padding: 45px 5px;
 }
 
 .front, .back {
@@ -34,16 +34,16 @@
 
 .project-title {
     padding-top: 20%;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 
 .project-technologies {
     padding: 5%;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 
 .project-button {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     width: 45%;
     margin: 5% 27.5%;
     padding: 5px 10px;
@@ -98,6 +98,7 @@
     .card {
         height: 19rem;
     }
+
     .project-title {
         padding-top: 15%;
         font-size: 1.5rem;
