--- a/public/css/portfoliostyles.css
+++ b/public/css/portfoliostyles.css
@@ -99,6 +99,11 @@
         height: 19rem;
     }
 
+    .projects {
+        padding-right: 10px;
+        padding-bottom: 55px;
+    }
+
     .project-title {
         padding-top: 15%;
         font-size: 1.5rem;
@@ -118,6 +123,8 @@
 
     .projects {
         width: 60%;
+        padding-right: 15px;
+        padding-bottom: 55px;
     }
 
     .project-title {
